Pagination component should be correctly aligned with it’s table
Does not apply to datagrid pagination

--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -167,6 +167,10 @@ td.table__form {
     }
 }
 
+.table-container + .pagination {
+    margin-top: -24px; // negate default bottom border of .table
+}
+
 // Map depracated table styles to this one -------------------------------------
 
 .table--datagrid {
